--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,10 +11,18 @@
 <head>
   <meta charset="utf-8"/>
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Ruluko&display=swap" rel="stylesheet">
+  <!--
+    If you’re planning on using the Material-UI icons at all, also add the Google Web Font link:
+  -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="theme-color" content="#000000"/>
   <meta
-          name="description"
+          name="BeoEarth SPA"
           content="Web site created using create-react-app"
   />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
@@ -33,7 +41,6 @@
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
   <title>BeoEarth SPA</title>
-  <script src="lib/beo.routines.js"></script>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
