--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Ruluko&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <!--
     If you’re planning on using the Material-UI icons at all, also add the Google Web Font link:
   -->
@@ -25,7 +25,6 @@
           name="BeoEarth SPA"
           content="Web site created using create-react-app"
   />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
   <!--
     manifest.json provides metadata used when your web app is installed on a
     user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
