--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,8 @@
   <meta charset="utf-8"/>
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
 
+  <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyB-pdbBGLEr5DlPsvfL3C1Pz8seb3d2gEQ&amp;libraries=places" defer></script>
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <!--
